# ML-learning-journey

./: README.md  pyproject.toml
data-science-fundamentals/: data_gathering.ipynb
projects/Placement_Prediction_Project/: model.pkl  placement_prediction_project.ipynb
