[project]
name = "ml-learning-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mlxtend>=0.23.4",
    "mysql-connector>=2.2.9",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
]
